--- a/Introduction to Graph Theory and Python.ipynb
+++ b/Introduction to Graph Theory and Python.ipynb
@@ -26,7 +26,7 @@
    "id": "66d2b461",
    "metadata": {},
    "source": [
-    "Cycle graph"
+    "## Cycle graph"
    ]
   },
   {
@@ -56,12 +56,12 @@
    "id": "377463d0",
    "metadata": {},
    "source": [
-    "complete graph"
+    "## complete graph"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b56cabda",
+   "id": "4c515b82",
    "metadata": {},
    "source": [
     "The complete graph on n vertices is denoted $K_n$\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efbb6c14",
+   "id": "e00b62a9",
    "metadata": {},
    "source": [
     "$K_1$ through $K_4$ are all planar graphs.  The nonplanar complete graph $K_5$ plays a key role in characterizations of planar graphs via Kuratowski's theorem.  A graph is planar if it does not contain $K_5$ or the complete bipartite graph (Utility Graph) $K_3,_3$"
@@ -126,12 +126,12 @@
    "id": "4235da27",
    "metadata": {},
    "source": [
-    "utility graph (complete bipartite graph) $K_3,_3$"
+    "## utility graph (complete bipartite graph) $K_3,_3$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a6388da6",
+   "id": "885bb4db",
    "metadata": {},
    "source": [
     "$K_3,_3$ is a graph with six vertices and nine edges, often referred to as the utility graph in reference to the Three Utilities Problem and part of the two forbidden graphs characterized by Kazimeirz Kuratowski."
@@ -203,7 +203,7 @@
    "id": "0b5d4453",
    "metadata": {},
    "source": [
-    "Complement of a graph"
+    "## Complement of a graph"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "id": "04396a7a",
    "metadata": {},
    "source": [
-    "Degree of a graph"
+    "## Degree of a graph"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "id": "a91bf010",
    "metadata": {},
    "source": [
-    "Adjacency matrix"
+    "## Adjacency matrix"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "id": "2e9d81aa",
    "metadata": {},
    "source": [
-    "cycles"
+    "## cycles"
    ]
   },
   {
@@ -505,12 +505,12 @@
    "id": "74f49b18",
    "metadata": {},
    "source": [
-    "planarity"
+    "## planarity"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8673307",
+   "id": "52662cac",
    "metadata": {},
    "source": [
     "If $G$ is a graph that contains a subgraph $H$ that is a subdivision of $K_5$ or $K_3,_3$ then $H$ is known as a Kuratowski subgraph of $G$ With this notation, Kuratowski's theorem can be expressed succinctly: a graph is planar if and only if it does not have a Kuratowski subgraph. "
@@ -561,7 +561,7 @@
    "id": "375900b6",
    "metadata": {},
    "source": [
-    "Isomorphism - Subgraphs"
+    "## Isomorphism - Subgraphs"
    ]
   },
   {
@@ -667,7 +667,7 @@
    "id": "4f23763a",
    "metadata": {},
    "source": [
-    "Isomorphism"
+    "## Isomorphism"
    ]
   },
   {
