--- a/Introduction to Graph Theory and Python.ipynb
+++ b/Introduction to Graph Theory and Python.ipynb
@@ -30,6 +30,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9e13693",
+   "metadata": {},
+   "source": [
+    "A cycle is a circuit in which only the first and last vertices are equal.\n",
+    "A graph without cycles is called an acyclic graph.  A connected graph without cycles is called a tree."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "9cdec51a",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c515b82",
+   "id": "ec8e13f0",
    "metadata": {},
    "source": [
     "The complete graph on n vertices is denoted $K_n$\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e00b62a9",
+   "id": "04ac6fe4",
    "metadata": {},
    "source": [
     "$K_1$ through $K_4$ are all planar graphs.  The nonplanar complete graph $K_5$ plays a key role in characterizations of planar graphs via Kuratowski's theorem.  A graph is planar if it does not contain $K_5$ or the complete bipartite graph (Utility Graph) $K_3,_3$"
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885bb4db",
+   "id": "5e456180",
    "metadata": {},
    "source": [
     "$K_3,_3$ is a graph with six vertices and nine edges, often referred to as the utility graph in reference to the Three Utilities Problem and part of the two forbidden graphs characterized by Kazimeirz Kuratowski."
@@ -242,6 +251,14 @@
    "metadata": {},
    "source": [
     "## Degree of a graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f177ff1c",
+   "metadata": {},
+   "source": [
+    "The degree of a vertex in a graph is number of connections it has to other vertices."
    ]
   },
   {
@@ -510,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52662cac",
+   "id": "c6c48578",
    "metadata": {},
    "source": [
     "If $G$ is a graph that contains a subgraph $H$ that is a subdivision of $K_5$ or $K_3,_3$ then $H$ is known as a Kuratowski subgraph of $G$ With this notation, Kuratowski's theorem can be expressed succinctly: a graph is planar if and only if it does not have a Kuratowski subgraph. "
